--- a/lesson3/index.html
+++ b/lesson3/index.html
@@ -7,10 +7,12 @@
     <link rel="stylesheet" href="style.css" />
     <title>Document</title>
   </head>
+
   <body>
+    <div class="modal"></div>
+    <div class="overlay"></div>
     <button id="btn" data-color="red">push me</button>
     <button id="show" data-color="red">show modal</button>
-    <div class="modal"></div>
     <script src="main.js"></script>
   </body>
 </html>
