--- a/modal/index.html
+++ b/modal/index.html
@@ -7,7 +7,18 @@
     <link rel="stylesheet" href="style.css" />
     <title>Document</title>
   </head>
+
   <body>
+    <button id="show" data-modal="#sign-in">show modal</button>
+    <div class="overlay">
+      <div class="modal" id="sign-in">
+        модальное окно
+        <button id="close" data-modal="#sign-in">close modal</button>
+      </div>
+    </div>
+
+    <!-- <button id="btn" data-color="red">push me</!-->
+
     <script src="main.js"></script>
   </body>
 </html>
